syntax = "proto3";

option java_package = "com.grpcserver.product";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


service ProductService {

   rpc insert(Product) returns(APIResponse);
    rpc findAll(Empty) returns(stream Product);
    rpc deleteById(Product) returns(APIResponse);
    rpc findById(google.protobuf.Int32Value) returns(Product);
    rpc update(Product) returns(APIResponse);

   

}

message Empty {}



message Product{

	int32 purchase_item = 1;
    string productname = 2;
    string productbrand = 3;
    double productprice = 4;
    string productdescription = 5;
    int32 productquantity = 6;
    string  productexpirationdate = 8;



}




message APIResponse{
      string responsemessage = 1;
      int32  responseCode  = 2;
}


